# fastapi-template

./: Makefile  README.md  pyproject.toml
backend/: .pre-commit-config.yaml  .pre-commit-config.yml  docker-compose-local.yaml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 29fa788b2282_init_user_model.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: auth.py  test.py
backend/src/auth/: oauth.py
backend/src/core/: config.py  security.py
backend/src/crud/: base.py  user.py
backend/src/db/: __init__.py  engine.py  session.py
backend/src/models/: __init__.py  user.py
backend/src/utils/: logger.py  password_pydantic.py  singleton.py
scripts/: install_dev  install_dev.sh
