[tool.poetry]
name = "monopolys-backend"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
asyncpg = "^0.29.0"
envparse = "^0.2.0"
alembic = "^1.13.1"
sqlmodel = "^0.0.14"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
authlib = "^1.3.0"
httpx = "^0.26.0"
itsdangerous = "^2.1.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"
sqlalchemy-stubs = "^0.4"
pre-commit = "^3.6.0"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlmypy"]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
extend-select = [
    "I",  #isort
    "UP", #pyupgrade
    # "D",  #pydocstyle
    "F", #pyflakes
]

[tool.ruff.extend-per-file-ignores]
# Also ignore `F401` in all `__init__.py` files.
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
